<resources>
    <string name="app_name">WeatherForecast</string>
    <string name="main">Günlük hava durumu</string>
    <string name="spinner_second_not_first">Önce il seçiniz</string>
    <string name="spinner_second">İlçe seçiniz</string>
    <string name="prmt">İl seçiniz --></string>
    <string name="goster">Göster</string>
    <string name="back">Back</string>
    <string name="bugun">Bugün</string>
    <string name="yarin">Yarın</string>
    <string name="tarih">Tarih</string>
    <string name="hava">Hava</string>
    <string name="gunduz">Gündüz</string>
    <string name="gece">Gece</string>
    <string name="offline">You appear offline</string>
    <string name="ilce">İlçe seçiniz --></string>
    <string name="konum">Konum göster</string>
    <string-array name="arrProvinces">
        <item>İl seçiniz</item>
        <item>Adana</item>
        <item>Adıyaman</item>
        <item>Afyonkarahisar</item>
        <item>Ağrı</item>
        <item>Aksaray</item>
        <item>Amasya</item>
        <item>Ankara</item>
        <item>Antalya</item>
        <item>Ardahan</item>
        <item>Artvin</item>
        <item>Aydın</item>
        <item>Balıkesir</item>
        <item>Bartın</item>
        <item>Batman</item>
        <item>Bayburt</item>
        <item>Bilecik</item>
        <item>Bingöl</item>
        <item>Bitlis</item>
        <item>Bolu</item>
        <item>Burdur</item>
        <item>Bursa</item>
        <item>Çanakkale</item>
        <item>Çankırı</item>
        <item>Çorum</item>
        <item>Denizli</item>
        <item>Diyarbakır</item>
        <item>Düzce</item>
        <item>Edirne</item>
        <item>Elazığ</item>
        <item>Erzincan</item>
        <item>Erzurum</item>
        <item>Eskişehir</item>
        <item>Gaziantep</item>
        <item>Giresun</item>
        <item>Gümüşhane</item>
        <item>Hakkari</item>
        <item>Hatay</item>
        <item>Iğdır</item>
        <item>Isparta</item>
        <item>İstanbul</item>
        <item>İzmir</item>
        <item>Kahramanmaraş</item>
        <item>Karabük</item>
        <item>Karaman</item>
        <item>Kars</item>
        <item>Kastamonu</item>
        <item>Kayseri</item>
        <item>Kilis</item>
        <item>Kırıkkale</item>
        <item>Kırklareli</item>
        <item>Kırşehir</item>
        <item>Kocaeli</item>
        <item>Konya</item>
        <item>Kütahya</item>
        <item>Malatya</item>
        <item>Manisa</item>
        <item>Mardin</item>
        <item>Mersin</item>
        <item>Muğla</item>
        <item>Muş</item>
        <item>Nevşehir</item>
        <item>Niğde</item>
        <item>Ordu</item>
        <item>Osmaniye</item>
        <item>Rize</item>
        <item>Sakarya</item>
        <item>Samsun</item>
        <item>Şanlıurfa</item>
        <item>Siirt</item>
        <item>Sinop</item>
        <item>Şırnak</item>
        <item>Sivas</item>
        <item>Tekirdağ</item>
        <item>Tokat</item>
        <item>Trabzon</item>
        <item>Tunceli</item>
        <item>Uşak</item>
        <item>Van</item>
        <item>Yalova</item>
        <item>Yozgat</item>
        <item>Zonguldak</item>
    </string-array>
    <string-array name="p0">
        <item>Önce il seçiniz</item>
    </string-array>
    <string-array name="p1">
        <item>Şehir Merkezi</item>
        <item>Aladağ</item>
        <item>Ceyhan</item>
        <item>Çukurova</item>
        <item>Feke</item>
        <item>İmamoğlu</item>
        <item>Karaisalı</item>
        <item>Karataş</item>
        <item>Kozan</item>
        <item>Pozantı</item>
        <item>Saimbeyli</item>
        <item>Sarıçam</item>
        <item>Seyhan</item>
        <item>Tufanbeyli</item>
        <item>Yumurtalık</item>
        <item>Yüreğir</item>
    </string-array>
    <string-array name="p2">
        <item>Şehir Merkezi</item>
        <item>Besni</item>
        <item>Çelikhan</item>
        <item>Gerger</item>
        <item>Gölbaşı</item>
        <item>Kahta</item>
        <item>Samsat</item>
        <item>Sincik</item>
        <item>Tut</item>
    </string-array>
    <string-array name="p3">
        <item>Şehir Merkezi</item>
        <item>Başmakçı</item>
        <item>Bayat</item>
        <item>Bolvadin</item>
        <item>Çay</item>
        <item>Çobanlar</item>
        <item>Dazkırı</item>
        <item>Dinar</item>
        <item>Emirdağ</item>
        <item>Evciler</item>
        <item>Hocalar</item>
        <item>İhsaniye</item>
        <item>İscehisar</item>
        <item>Kızılören</item>
        <item>Sandıklı</item>
        <item>Sinanpaşa</item>
        <item>Şuhut</item>
        <item>Sultandağı</item>
    </string-array>
    <string-array name="p4">
        <item>Şehir Merkezi</item>
        <item>Diyadin</item>
        <item>Doğubeyazıt</item>
        <item>Eleşkirt</item>
        <item>Hamur</item>
        <item>Patnos</item>
        <item>Taşlıçay</item>
        <item>Tutak</item>
    </string-array>
    <string-array name="p5">
        <item>Şehir Merkezi</item>
        <item>Ağaçören</item>
        <item>Eskil</item>
        <item>Gülağaç</item>
        <item>Güzelyurt</item>
        <item>Ortaköy</item>
        <item>Sarıyahşi</item>
    </string-array>
    <string-array name="p6">
        <item>Şehir Merkezi</item>
        <item>Göynücek</item>
        <item>Gümüşhacıköy</item>
        <item>Hamamözü</item>
        <item>Merzifon</item>
        <item>Suluova</item>
        <item>Taşova</item>
    </string-array>
    <string-array name="p7">
        <item>Şehir Merkezi</item>
        <item>Akyurt</item>
        <item>Altındağ</item>
        <item>Ayaş</item>
        <item>Bala</item>
        <item>Beypazarı</item>
        <item>Çamlıdere</item>
        <item>Çankaya</item>
        <item>Çubuk</item>
        <item>Elmadağ</item>
        <item>Etimesgut</item>
        <item>Evren</item>
        <item>Gölbaşı</item>
        <item>Güdül</item>
        <item>Haymana</item>
        <item>Kalecik</item>
        <item>Kazan</item>
        <item>Keçiören</item>
        <item>Kızılcahamam</item>
        <item>Mamak</item>
        <item>Nallıhan</item>
        <item>Polatlı</item>
        <item>Pursaklar</item>
        <item>Sincan</item>
        <item>Şereflikoçhisar</item>
        <item>Yenimahalle</item>
    </string-array>
    <string-array name="p8">
        <item>Şehir Merkezi</item>
        <item>Akseki</item>
        <item>Aksu</item>
        <item>Alanya</item>
        <item>Döşemealtı</item>
        <item>Elmalı</item>
        <item>Finike</item>
        <item>Gazipaşa</item>
        <item>Gündoğmuş</item>
        <item>İbradi</item>
        <item>Kale</item>
        <item>Kaş</item>
        <item>Kemer</item>
        <item>Kepez</item>
        <item>Konyaaltı</item>
        <item>Korkuteli</item>
        <item>Kumluca</item>
        <item>Manavgat</item>
        <item>Muratpaşa</item>
        <item>Serik</item>
    </string-array>
    <string-array name="p9">
        <item>Şehir Merkezi</item>
        <item>Çıldır</item>
        <item>Damal</item>
        <item>Göle</item>
        <item>Hanak</item>
        <item>Posof</item>
    </string-array>
    <string-array name="p10">
        <item>Şehir Merkezi</item>
        <item>Ardanuç</item>
        <item>Arhavi</item>
        <item>Borçka</item>
        <item>Hopa</item>
        <item>Murgul</item>
        <item>Şavşat</item>
        <item>Yusufeli</item>
    </string-array>
    <string-array name="p11">
        <item>Şehir Merkezi</item>
        <item>Bozdoğan</item>
        <item>Buharkent</item>
        <item>Çine</item>
        <item>Didim</item>
        <item>Germencik</item>
        <item>İncirliova</item>
        <item>Karacasu</item>
        <item>Karpuzlu</item>
        <item>Koçarlı</item>
        <item>Köşk</item>
        <item>Kuşadası</item>
        <item>Kuyucak</item>
        <item>Nazilli</item>
        <item>Söke</item>
        <item>Sultanhisar</item>
        <item>Yenipazar</item>
    </string-array>
    <string-array name="p12">
        <item>Şehir Merkezi</item>
        <item>Ayvalık</item>
        <item>Balya</item>
        <item>Bandırma</item>
        <item>Bigadiç</item>
        <item>Burhaniye</item>
        <item>Dursunbey</item>
        <item>Edremit</item>
        <item>Erdek</item>
        <item>Gömeç</item>
        <item>Gönen</item>
        <item>Havran</item>
        <item>İvrindi</item>
        <item>Kepsut</item>
        <item>Manyas</item>
        <item>Marmara</item>
        <item>Şavaştepe</item>
        <item>Sıngırdı</item>
        <item>Susurluk</item>
    </string-array>
    <string-array name="p13">
        <item>Şehir Merkezi</item>
        <item>Amasra</item>
        <item>Kurucaşile</item>
        <item>Ulus</item>
    </string-array>
    <string-array name="p14">
        <item>Şehir Merkezi</item>
        <item>Beşiri</item>
        <item>Gerçüş</item>
        <item>Hasankeyf</item>
        <item>Kozluk</item>
        <item>Sason</item>
    </string-array>
    <string-array name="p15">
        <item>Şehir Merkezi</item>
        <item>Aydıntepe</item>
        <item>Demirözü</item>
    </string-array>
    <string-array name="p16">
        <item>Şehir Merkezi</item>
        <item>Bozüyük</item>
        <item>Gölpazarı</item>
        <item>İnhisar</item>
        <item>Osmaneli</item>
        <item>Pazaryeri</item>
        <item>Söğüt</item>
        <item>Yenipazar</item>
    </string-array>
    <string-array name="p17">
        <item>Şehir Merkezi</item>
        <item>Adaklı</item>
        <item>Genç</item>
        <item>Karlıova</item>
        <item>Kiğı</item>
        <item>Solhan</item>
        <item>Yayladere</item>
        <item>Yedisu</item>
    </string-array>
    <string-array name="p18">
        <item>Şehir Merkezi</item>
        <item>Adilcevaz</item>
        <item>Ahlat</item>
        <item>Bitlis</item>
        <item>Güroymak</item>
        <item>Hizan</item>
        <item>Mutki</item>
        <item>Tatvan</item>
    </string-array>
    <string-array name="p19">
        <item>Şehir Merkezi</item>
        <item>Dörtdivan</item>
        <item>Gerede</item>
        <item>Göynük</item>
        <item>Kıbrıscık</item>
        <item>Mengen</item>
        <item>Mudurnu</item>
        <item>Seben</item>
        <item>Yeniçağa</item>
    </string-array>
    <string-array name="p20">
        <item>Şehir Merkezi</item>
        <item>Ağlasun</item>
        <item>Altınyayla</item>
        <item>Bucak</item>
        <item>Çavdır</item>
        <item>Çeltikçi</item>
        <item>Gölhisar</item>
        <item>Karamanlı</item>
        <item>Kemer</item>
        <item>Tefenni</item>
        <item>Yeşilova</item>
    </string-array>
    <string-array name="p21">
        <item>Şehir Merkezi</item>
        <item>Büyükorhan</item>
        <item>Gemlik</item>
        <item>Gürsu</item>
        <item>Harmancık</item>
        <item>İnegöl</item>
        <item>İznik</item>
        <item>Karacabey</item>
        <item>Keles</item>
        <item>Kestel</item>
        <item>Mudanya</item>
        <item>Mustafakemalpaşa</item>
        <item>Nilüfer</item>
        <item>Orhaneli</item>
        <item>Orhangazi</item>
        <item>Osmangazi</item>
        <item>Yenişehir</item>
        <item>Yıldırım</item>
    </string-array>
    <string-array name="p22">
        <item>Şehir Merkezi</item>
        <item>Ayvacık</item>
        <item>Bayramiç</item>
        <item>Biga</item>
        <item>Bozcaada</item>
        <item>Çan</item>
        <item>Çanakkale</item>
        <item>Eceabat</item>
        <item>Ezine</item>
        <item>Gelibolu</item>
        <item>Gökçeada</item>
        <item>Lapseki</item>
        <item>Yenice</item>
    </string-array>
</resources>