<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/acik_koyu_mavi"
    android:orientation="vertical"
    tools:context="com.example.user.weatherforecast.MainActivity"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="0.59"
        android:background="@color/gri">

        <pl.droidsonroids.gif.GifTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/weather"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"/>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.41">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="0.7">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/White"
                        android:gravity="center"
                        android:text="@string/prmt"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/red_light"
                        android:entries="@array/arrProvinces"
                        android:spinnerMode="dialog" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="0.7">

                    <TextView
                        android:id="@+id/textV"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/White"
                        android:gravity="center"
                        android:text="@string/ilce"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:visibility="invisible"/>

                    <Spinner
                        android:id="@+id/spinnerIlce"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/red_light"
                        android:entries="@array/p0"
                        android:spinnerMode="dialog"
                        android:visibility="invisible"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|top"
                android:gravity="center|top"
                android:orientation="vertical"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/buttonGoster"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="3dp"
                        android:gravity="center"
                        android:text="@string/goster"
                        android:background="@color/main_theme"
                        android:layout_weight="0.5" />

                    <Button
                        android:id="@+id/buttonYer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="3dp"
                        android:gravity="center"
                        android:text="@string/konum"
                        android:background="@color/main_theme"
                        android:layout_weight="0.5" />
                </LinearLayout>

                <TextView
                    android:id="@+id/warn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/red"
                    android:text="@string/offline"
                    android:textColor="@color/Black"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:visibility="invisible" />

            </LinearLayout>
        </LinearLayout>
</LinearLayout>